--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     </div>
     <!--banner end-->
     <div class="bannerText container">
-      <h1>I'm Jonathan Doe</h1>
-      <h2>Design & Build Beautiful Crafted Web Experiences</h2>
+      <h1>I'm Jim Hsu</h1>
+      <h2>一艺之成，当尽毕生之力！</h2>
     </div>
     <!--menu start-->
     <div class="menu">
@@ -60,13 +60,13 @@
                   <a class="navbar-brand" href="#">Menu</a> </div>
                 <div class="navbar-collapse collapse">
                   <ul class="nav navbar-nav">
-                    <li class="menuItem active"><a href="#wrapper">Home</a></li>
-                    <li class="menuItem"><a href="#aboutme">About</a></li>
-                    <li class="menuItem"><a href="#technical">Skills</a></li>
-                    <li class="menuItem"><a href="#exprience">Experience</a></li>
-                    <li class="menuItem"><a href="#education">Education</a></li>
-                    <li class="menuItem"><a href="#protfolio">Portfolio</a></li>
-                    <li class="menuItem"><a href="#contact">Contact</a></li>
+                    <li class="menuItem active"><a href="#wrapper">首页</a></li>
+                    <li class="menuItem"><a href="#aboutme">关于</a></li>
+                    <li class="menuItem"><a href="#technical">技能</a></li>
+                    <li class="menuItem"><a href="#exprience">经历</a></li>
+                    <li class="menuItem"><a href="#education">教育</a></li>
+                    <li class="menuItem"><a href="#protfolio">作品</a></li>
+                    <li class="menuItem"><a href="#contact">联系</a></li>
                   </ul>
                 </div>
               </div>
