--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     </div>
     <!--banner end-->
     <div class="bannerText container">
-      <h1>I'm Jim Hsu</h1>
-      <h2>一艺之成，当尽毕生之力！</h2>
+      <h1>我是许振俊</h1>
+      <h2>互联网产品经理</h2>
     </div>
     <!--menu start-->
     <div class="menu">
@@ -87,8 +87,8 @@
       </div>
       <div class="row">
         <div class=" col-xs-12 col-sm-12 col-md-7 col-lg-7">
-          <h3>Jonathan Doe</h3>
-          <h4 class="subHeading">Webdesigner & Web Developer from Melbourne</h4>
+          <h3>许振俊</h3>
+          <h4 class="subHeading">互联网产品经理</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat.  cillum dolore eu fugiat nulla pariatur. olore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
           <p>nulla pariatur.uis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. olore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
           <a href="#" class="bntDownload">Download Printable Resume</a> </div>
