--- a/index.html
+++ b/index.html
@@ -101,14 +101,14 @@
   <section class="technical" id="technical">
     <div class="container">
       <div class="heading">
-        <h2>Technical Skills</h2>
-        <p>I can say i’m quite good at</p>
+        <h2>工作技能</h2>
+        <p>我擅长什么？</p>
       </div>
       <div class="row">
         <div class=" col-xs-12 col-sm-4 col-md-4 col-lg-4 skillsArea">
           <div class=" col-xs-12 col-sm-6 col-md-6 col-lg-6 skills"> <span class="chart skilBg" data-percent="90"> <span class="percent"></span> </span>
-            <h4>Photoshop</h4>
-            <p>Donec accumsan ligula vitae mag na curabitur id</p>
+            <h4>Axure</h4>
+            <p>线框图、高保真</p>
           </div>
         </div>
         <div class=" col-xs-12 col-sm-4 col-md-4 col-lg-4 skillsArea">
