--- a/index.html
+++ b/index.html
@@ -108,31 +108,31 @@
         <div class=" col-xs-12 col-sm-4 col-md-4 col-lg-4 skillsArea">
           <div class=" col-xs-12 col-sm-6 col-md-6 col-lg-6 skills"> <span class="chart skilBg" data-percent="90"> <span class="percent"></span> </span>
             <h4>Axure</h4>
-            <p>线框图、高保真</p>
+            <p>线框图、高保真原型设计</p>
           </div>
         </div>
         <div class=" col-xs-12 col-sm-4 col-md-4 col-lg-4 skillsArea">
           <div class=" col-xs-12 col-sm-6 col-md-6 col-lg-6 skills"> <span class="chart skilBg" data-percent="80"> <span class="percent"></span> </span>
-            <h4>Illustrator</h4>
-            <p>Donec accumsan ligula vitae mag na curabitur id</p>
+            <h4>MindManager</h4>
+            <p>头脑风暴、思维整理和表达、文档编写</p>
           </div>
         </div>
         <div class=" col-xs-12 col-sm-4 col-md-4 col-lg-4 skillsArea">
           <div class=" col-xs-12 col-sm-6 col-md-6 col-lg-6 skills"> <span class="chart skilBg" data-percent="80"> <span class="percent"></span> </span>
-            <h4>Flash</h4>
-            <p>Donec accumsan ligula vitae mag na curabitur id</p>
+            <h4>Word</h4>
+            <p>MRD、BRD、PRD编写</p>
           </div>
         </div>
         <div class=" col-xs-12 col-sm-4 col-md-4 col-lg-4 skillsArea">
           <div class=" col-xs-12 col-sm-6 col-md-6 col-lg-6 skills"> <span class="chart skilBg" data-percent="75"> <span class="percent"></span> </span>
-            <h4>HTML5 / CSS3</h4>
-            <p>Donec accumsan ligula vitae mag na curabitur id</p>
+            <h4>Excel</h4>
+            <p>业务需求管理、功能需求管理、项目进度管理</p>
           </div>
         </div>
         <div class=" col-xs-12 col-sm-4 col-md-4 col-lg-4 skillsArea">
           <div class=" col-xs-12 col-sm-6 col-md-6 col-lg-6 skills"> <span class="chart skilBg" data-percent="60"> <span class="percent"></span> </span>
-            <h4>jQuery</h4>
-            <p>Donec accumsan ligula vitae mag na curabitur id</p>
+            <h4>PPT</h4>
+            <p>产品演说、会议演说</p>
           </div>
         </div>
         <div class=" col-xs-12 col-sm-4 col-md-4 col-lg-4 skillsArea">
