--- a/index.html
+++ b/index.html
@@ -201,49 +201,21 @@
   <section class="education" id="education">
     <div class="container">
       <div class="heading">
-        <h2>Education & Diplomas</h2>
-        <p>What I have done in my academic career</p>
+        <h2>教育</h2>
+        <p>哪个毕业院校？</p>
       </div>
       <div class="row workDetails">
         <div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
-          <div class="workYear">Mar,2010</div>
+          <div class="workYear">2010年6月</div>
         </div>
         <div class="col-xs-12 col-sm-9 col-md-10 col-lg-10 rightArea">
           <div class="arrowpart"></div>
           <div class="exCon">
-            <h4>Master Degree of Design</h4>
-            <h5>University of Design</h5>
-            <p>Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quom placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui faorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius.</p>
+            <h4>浙江师范大学</h4>
+            <h5>机电一体化技术</h5>
           </div>
         </div>
       </div>
-      <div class="row workDetails">
-        <div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
-          <div class="workYear">Sept, 2007</div>
-        </div>
-        <div class="col-xs-12 col-sm-9 col-md-10 col-lg-10 rightArea">
-          <div class="arrowpart"></div>
-          <div class="exCon">
-            <h4>Bachelor of Arts</h4>
-            <h5>University of Design</h5>
-            <p>Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quom placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui faorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius.</p>
-          </div>
-        </div>
-      </div>
-      <div class="row workDetails">
-        <div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
-          <div class="workYear">Feb, 2005</div>
-        </div>
-        <div class="col-xs-12 col-sm-9 col-md-10 col-lg-10 rightArea">
-          <div class="arrowpart"></div>
-          <div class="exCon">
-            <h4>Master Degree of Design</h4>
-            <h5>University of Design</h5>
-            <p>Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quom placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui faorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius.</p>
-          </div>
-        </div>
-      </div>
-    </div>
   </section>
   <!--education end-->
   <div class="copyrights">Collect from <a href="http://www.cssmoban.com/" >免费模板</a></div>
